# apex-legends-sdk

./: .gitmodules  CMakeLists.txt  README.md
extlibs/: CMakeLists.txt
include/apex_sdk/: BaseEntity.h  Controller.h  EntityList.h  MemoryManagerSinglton.h  Offsets.h  ProjectilePrediction.h  Weapon.h  WorldToScreen.h
source/: BaseEntity.cpp  CMakeLists.txt  Controller.cpp  EntityList.cpp  MemoryManagerSingleton.cpp  ProjectilePrediction.cpp  Weapon.cpp  WorldToScreen.cpp
